--- a/resources/skins.citizen.styles/components/Pagetools.less
+++ b/resources/skins.citizen.styles/components/Pagetools.less
@@ -178,7 +178,6 @@
 			bottom: 100%;
 			/* Fix card width issue when the page tool bar is narrow */
 			width: max-content;
-			max-width: ~'calc( 100vw - var( --space-xs ) * 2 )';
 		}
 	}
 
